...

                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcyPopularMovie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:clipToPadding="false"
                    android:layout_marginTop="15dp"
                    android:visibility="gone"
...
