...
            android:layout_height="wrap_content"
            app:layout_anchor="@id/app_bar_layout"
            app:layout_anchorGravity="bottom|right|end"
            >

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabAddToFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="20dp"
                android:clickable="true"
                android:focusable="true"
...
